[gd_scene load_steps=29 format=3 uid="uid://dijpaiy3bf8dn"]

[ext_resource type="Script" path="res://ILMOITUS.gd" id="1_2x414"]
[ext_resource type="Theme" uid="uid://brx6vlh7v4gl" path="res://teemajee.tres" id="1_pajbr"]
[ext_resource type="PackedScene" uid="uid://dtyjeg1kapndm" path="res://nappi.tscn" id="2_b0mx4"]
[ext_resource type="Texture2D" uid="uid://cmxwtyoqqdk5w" path="res://GFX/Popup/laatikko.png" id="2_kk5fx"]
[ext_resource type="Texture2D" uid="uid://c77klcyq8da1j" path="res://GFX/Popup/laatikkoglitz01.png" id="3_rk58d"]
[ext_resource type="Texture2D" uid="uid://qe4p2ukgxkr1" path="res://GFX/Popup/laatikkoglitz10.png" id="4_a2cqc"]
[ext_resource type="Texture2D" uid="uid://cgp40odjc08g4" path="res://GFX/Ikonit/vaara.png" id="4_ptalg"]
[ext_resource type="AudioStream" uid="uid://cjwsr5jfrea1t" path="res://SFX/poks.wav" id="4_vtjdd"]
[ext_resource type="Texture2D" uid="uid://58e8flj2wd3v" path="res://GFX/Popup/laatikkoglitz11.png" id="5_7n5l2"]
[ext_resource type="AudioStream" uid="uid://bnexjksnjr6yv" path="res://SFX/keypress.wav" id="5_nnrod"]
[ext_resource type="Texture2D" uid="uid://dp7r2jv1yhcja" path="res://GFX/Popup/laatikkoglitz12.png" id="6_bb3nn"]
[ext_resource type="Texture2D" uid="uid://44t2ml4gkaly" path="res://GFX/Popup/laatikkoglitz13.png" id="7_bhpoe"]
[ext_resource type="Texture2D" uid="uid://bdm0o3v088fk2" path="res://GFX/Popup/laatikkoglitz14.png" id="8_8n1dr"]
[ext_resource type="Texture2D" uid="uid://bf4bpggbq4fb3" path="res://GFX/Popup/laatikkoglitz15.png" id="9_d4bip"]
[ext_resource type="Texture2D" uid="uid://b3tc5f4ty7qn7" path="res://GFX/Popup/laatikkoglitz16.png" id="10_ev4mu"]
[ext_resource type="Texture2D" uid="uid://d1e5mms5fmhet" path="res://GFX/Popup/laatikkoglitz17.png" id="11_58ko8"]
[ext_resource type="Texture2D" uid="uid://dveefmane5ujb" path="res://GFX/Popup/laatikkoglitz18.png" id="12_irslg"]
[ext_resource type="Texture2D" uid="uid://7i4p73whpiwj" path="res://GFX/Popup/laatikkoglitz19.png" id="13_4een1"]
[ext_resource type="Texture2D" uid="uid://c2l5jbd7er3je" path="res://GFX/Popup/laatikkoglitz02.png" id="14_otf2d"]
[ext_resource type="Texture2D" uid="uid://dsbckhps73jly" path="res://GFX/Popup/laatikkoglitz20.png" id="15_snybm"]
[ext_resource type="Texture2D" uid="uid://csecok3y1jkuc" path="res://GFX/Popup/laatikkoglitz03.png" id="16_b1ask"]
[ext_resource type="Texture2D" uid="uid://bbasbi47t1tjc" path="res://GFX/Popup/laatikkoglitz04.png" id="17_bowd4"]
[ext_resource type="Texture2D" uid="uid://3rnk1fn20d2a" path="res://GFX/Popup/laatikkoglitz05.png" id="18_qjk6y"]
[ext_resource type="Texture2D" uid="uid://cpm3phyv746t0" path="res://GFX/Popup/laatikkoglitz06.png" id="19_c02fm"]
[ext_resource type="Texture2D" uid="uid://dnyn7lfn2bijj" path="res://GFX/Popup/laatikkoglitz07.png" id="20_7hfyy"]
[ext_resource type="Texture2D" uid="uid://bq3ga2qhea253" path="res://GFX/Popup/laatikkoglitz08.png" id="21_d3nf8"]
[ext_resource type="Texture2D" uid="uid://cdjt70a15th4h" path="res://GFX/Popup/laatikkoglitz09.png" id="22_gxubw"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_nt2gk"]
frames = 21
pause = true
frame_0/texture = ExtResource("2_kk5fx")
frame_1/texture = ExtResource("3_rk58d")
frame_1/duration = 1.0
frame_2/texture = ExtResource("14_otf2d")
frame_2/duration = 1.0
frame_3/texture = ExtResource("16_b1ask")
frame_3/duration = 1.0
frame_4/texture = ExtResource("17_bowd4")
frame_4/duration = 1.0
frame_5/texture = ExtResource("18_qjk6y")
frame_5/duration = 1.0
frame_6/texture = ExtResource("19_c02fm")
frame_6/duration = 1.0
frame_7/texture = ExtResource("20_7hfyy")
frame_7/duration = 1.0
frame_8/texture = ExtResource("21_d3nf8")
frame_8/duration = 1.0
frame_9/texture = ExtResource("22_gxubw")
frame_9/duration = 1.0
frame_10/texture = ExtResource("4_a2cqc")
frame_10/duration = 1.0
frame_11/texture = ExtResource("5_7n5l2")
frame_11/duration = 1.0
frame_12/texture = ExtResource("6_bb3nn")
frame_12/duration = 1.0
frame_13/texture = ExtResource("7_bhpoe")
frame_13/duration = 1.0
frame_14/texture = ExtResource("8_8n1dr")
frame_14/duration = 1.0
frame_15/texture = ExtResource("9_d4bip")
frame_15/duration = 1.0
frame_16/texture = ExtResource("10_ev4mu")
frame_16/duration = 1.0
frame_17/texture = ExtResource("11_58ko8")
frame_17/duration = 1.0
frame_18/texture = ExtResource("12_irslg")
frame_18/duration = 1.0
frame_19/texture = ExtResource("13_4een1")
frame_19/duration = 1.0
frame_20/texture = ExtResource("15_snybm")
frame_20/duration = 1.0

[node name="ILMOITUS" type="TextureRect"]
self_modulate = Color(1, 1, 1, 0.878431)
custom_minimum_size = Vector2(320, 160)
layout_direction = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -80.0
offset_right = 160.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_pajbr")
texture = SubResource("AnimatedTexture_nt2gk")
expand_mode = 2
stretch_mode = 5
script = ExtResource("1_2x414")
button = ExtResource("2_b0mx4")
teksti = NodePath("VBoxContainer/MarginContainer/TEKSTI")
nappi_paikka = NodePath("VBoxContainer/NAPIT")
bar = NodePath("VBoxContainer/ColorRect/MarginContainer/Aika")
ajastin = NodePath("Ajastin")
naputin = NodePath("NÄPYTTÄJÄ")
animuaika = NodePath("Animu")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
color = Color(0, 0, 0, 0.498039)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="Aika" type="ProgressBar" parent="VBoxContainer/ColorRect/MarginContainer"]
modulate = Color(1, 1, 1, 0.784314)
use_parent_material = true
layout_mode = 2
size_flags_vertical = 1
max_value = 10.0
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_ptalg")
expand_mode = 2
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TEKSTI" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
horizontal_alignment = 1
autowrap_mode = 3

[node name="NAPIT" type="HBoxContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3

[node name="Ajastin" type="Timer" parent="."]
wait_time = 10.0

[node name="NÄPYTTÄJÄ" type="Timer" parent="."]
wait_time = 0.05

[node name="Animu" type="Timer" parent="."]

[node name="POKS" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vtjdd")
autoplay = true

[node name="TICK" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_nnrod")
volume_db = -10.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="resized" from="VBoxContainer/MarginContainer/TEKSTI" to="." method="_on_teksti_resized"]
[connection signal="timeout" from="Ajastin" to="." method="_on_ajastin_timeout"]
[connection signal="timeout" from="NÄPYTTÄJÄ" to="." method="_on_npyttj_timeout"]
[connection signal="timeout" from="Animu" to="." method="_on_animu_timeout"]
